@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - add formal deprecation notice - please use Test::TempDir::Tiny instead!
 
 0.08   2013-09-25 02:21:17Z
   - re-release with fixed compile test
